--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ altair==5.2.0
 annotated-types==0.6.0
 anyio==4.2.0
 attrs==23.1.0
+blinker==1.7.0
+cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
@@ -15,13 +17,15 @@ ffmpy==0.3.1
 filelock==3.13.1
 fonttools==4.47.0
 fsspec==2023.12.2
-gradio==4.12.0
+gitdb==4.0.11
+GitPython==3.1.40
 gradio_client==0.8.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
 huggingface-hub==0.20.1
 idna==3.6
+importlib-metadata==6.11.0
 importlib-resources==6.1.1
 Jinja2==3.1.2
 jsonschema==4.20.0
@@ -36,8 +40,11 @@ orjson==3.9.10
 packaging==23.2
 pandas==2.1.4
 Pillow==10.1.0
+protobuf==4.25.1
+pyarrow==14.0.2
 pydantic==2.5.3
 pydantic_core==2.14.6
+pydeck==0.8.1b0
 pydub==0.25.1
 Pygments==2.17.2
 pyparsing==3.1.1
@@ -53,14 +60,23 @@ rpds-py==0.15.2
 semantic-version==2.10.0
 shellingham==1.5.4
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.0
 starlette==0.32.0.post1
+streamlit==1.29.0
+tenacity==8.2.3
+toml==0.10.2
 tomlkit==0.12.0
 toolz==0.12.0
+tornado==6.4
 tqdm==4.66.1
 typer==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.3
+tzlocal==5.2
 urllib3==2.1.0
 uvicorn==0.25.0
+validators==0.22.0
+watchdog==3.0.0
 websockets==11.0.3
+zipp==3.17.0
