--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ anyio==4.2.0
 attrs==23.1.0
 blinker==1.7.0
 cachetools==5.3.2
+cattrs==23.2.3
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
@@ -40,6 +41,7 @@ orjson==3.9.10
 packaging==23.2
 pandas==2.1.4
 Pillow==10.1.0
+platformdirs==4.1.0
 protobuf==4.25.1
 pyarrow==14.0.2
 pydantic==2.5.3
@@ -55,6 +57,7 @@ pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.32.0
 requests==2.31.0
+requests-cache==1.1.1
 rich==13.7.0
 rpds-py==0.15.2
 semantic-version==2.10.0
@@ -74,6 +77,7 @@ typer==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.3
 tzlocal==5.2
+url-normalize==1.4.3
 urllib3==2.1.0
 uvicorn==0.25.0
 validators==0.22.0
